unpackaged/main/default/objects/System_Exception_Logger_Event__e/System_Exception_Logger_Event__e.object-meta.xml
<CustomObject>
    <label>System Exception Logger Event</label>
    <pluralLabel>System Exception Logger Events</pluralLabel>
</CustomObject>