unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <length>80</length>
    <type>Text</type>
</CustomField>