unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Data_Source__c</fullName>
    <label>Data Source</label>
    <length>40</length>
    <type>Text</type>
</CustomField>