unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Dml_Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Dml_Exception_Type__c</fullName>
    <label>Dml Exception Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>