unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Cause__c.field-meta.xml
<CustomField>
    <fullName>Exception_Cause__c</fullName>
    <label>Exception Cause</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>