unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Level__c.field-meta.xml
<CustomField>
    <fullName>Exception_Level__c</fullName>
    <label>Exception Level</label>
    <length>25</length>
    <type>Text</type>
</CustomField>