unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Line_Number__c.field-meta.xml
<CustomField>
    <fullName>Exception_Line_Number__c</fullName>
    <label>Exception Line Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>