unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Message_Summary__c.field-meta.xml
<CustomField>
    <fullName>Exception_Message_Summary__c</fullName>
    <label>Exception Message Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>