unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Run_As_User__c.field-meta.xml
<CustomField>
    <fullName>Exception_Run_As_User__c</fullName>
    <label>Exception Run As User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>