unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <label>Exception Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>