unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Integration_Date__c.field-meta.xml
<CustomField>
    <fullName>Integration_Date__c</fullName>
    <label>Integration Date</label>
    <type>DateTime</type>
</CustomField>