unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Success</label>
    <type>Checkbox</type>
</CustomField>