unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>