unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Object_Reference__c.field-meta.xml
<CustomField>
    <fullName>Object_Reference__c</fullName>
    <label>Object Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>