unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Secure_Support_Data__c.field-meta.xml
<CustomField>
    <fullName>Secure_Support_Data__c</fullName>
    <label>Secure Support Data</label>
    <length>175</length>
    <type>Text</type>
</CustomField>