unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Source_Application__c.field-meta.xml
<CustomField>
    <fullName>Source_Application__c</fullName>
    <label>Source Application</label>
    <length>255</length>
    <type>Text</type>
</CustomField>