unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Store_Data_As_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Store_Data_As_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Data As Attachment</label>
    <type>Checkbox</type>
</CustomField>