unpackaged/main/default/objects/System_Exception_Logger_Event__e/fields/Support_Data__c.field-meta.xml
<CustomField>
    <fullName>Support_Data__c</fullName>
    <label>Support Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>